--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="cover">
+        
         <svg version="1.1" id="레이어_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 3000" style="enable-background:new 0 0 1920 3000;" xml:space="preserve">
             <style type="text/css">
                 .st0{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFFFF;}
@@ -385,7 +386,7 @@
             <ul>
                 <li data-aos="fade-right" data-aos-duration="1500"><img src="images/popup_01.jpg" alt=""></li>
                 <li data-aos="fade-left" data-aos-duration="1500"><img src="images/popup_02.png" alt=""></li>
-                <li data-aos="fade-right" data-aos-duration="1500"><img src="images/popup_03.png" alt=""></li>
+                <li data-aos="fade-right" data-aos-duration="1500"><img src="images/popup_03.jpg" alt=""></li>
             </ul>
         </div>
     </div>
