이번에 되어주겠어?

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 <h2 data-aos="fade-down" data-aos-duration="1000">3.GODIVA<span class="detail">반응형 웹사이트 메인, 서브*2 디자인+퍼블리싱</span></h2>            
                 <div class="cont_box" data-aos="fade-up" data-aos-duration="1500">
                     <div class="main">
-                        <img src="images/web_03_main1.JPG" alt="">
+                        <img src="images/web_03_main.jpg" alt="">
                     </div>
                     <div class="description">
                         <ul class="title">
@@ -293,7 +293,7 @@
                     </div>
                     <div class="mobile">
                         <span>
-                            <img src="images/web_03_mo1.JPG" alt="">
+                            <img src="images/web_03_mo.jpg" alt="">
                         </span>
                         <img src="images/web_phone.png" alt="">
                     </div>
