--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div class="cover">
-        
         <svg version="1.1" id="레이어_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 3000" style="enable-background:new 0 0 1920 3000;" xml:space="preserve">
             <style type="text/css">
                 .st0{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFFFF;}
@@ -160,7 +159,7 @@
                     <h3>Experience</h3>
                     <div class="cont">
                         <ul calss="date">
-                            <li>2022.08~2023.09</li>
+                            <li>2020.08 ~ 2023.09</li>
                             <li>2018.07 ~ 2019.06 </li>
                         </ul>
                         <ul calss="text">
@@ -235,10 +234,10 @@
                 </div>
             </section>
             <section class="yoeat">
-                <h2 data-aos="fade-down" data-aos-duration="1000">2.yoeat<span class="detail">웹사이트 메인, 서브*3 디자인+퍼블리싱</span></h2>            
+                <h2 data-aos="fade-down" data-aos-duration="1000">2.yoeat<span class="detail"> 반응형 웹사이트 메인, 서브*3 디자인+퍼블리싱</span></h2>            
                 <div class="cont_box" data-aos="fade-up" data-aos-duration="1500">
                     <div class="main">
-                        <img src="images/web_02_main.jpg" alt="">
+                        <img src="images/web_02_main.jpeg" alt="">
                     </div>
                     <div class="description">
                         <ul class="title">
@@ -256,11 +255,11 @@
                         <span>HTML 보기</span>
                     </a>
                     <div class="sub">
-                        <img src="images/web_02_sub_05.jpg" alt="">
+                        <img src="images/web_02_sub_05.jpeg" alt="">
                     </div>
                     <div class="mobile">
                         <span>
-                            <img src="images/web_02_mo.jpg" alt="">
+                            <img src="images/web_02_mo.jpeg" alt="">
                         </span>
                         <img src="images/web_phone.png" alt="">
                     </div>
@@ -270,7 +269,7 @@
                 <h2 data-aos="fade-down" data-aos-duration="1000">3.GODIVA<span class="detail">반응형 웹사이트 메인, 서브*2 디자인+퍼블리싱</span></h2>            
                 <div class="cont_box" data-aos="fade-up" data-aos-duration="1500">
                     <div class="main">
-                        <img src="images/web_03_main.jpg" alt="">
+                        <img src="images/web_03_main.jpeg" alt="">
                     </div>
                     <div class="description">
                         <ul class="title">
@@ -285,11 +284,11 @@
                                 어울리지 않는 느낌</li>
                         </ul>
                     </div>
-                    <a href="http://vnvn3302.dothome.co.kr/" class="clickme">
+                    <a href="http://vnvn3302.dothome.co.kr/godiva/" class="clickme">
                         <span>HTML 보기</span>
                     </a>
                     <div class="sub">
-                        <img src="images/web_03_sub_02.png" alt="">
+                        <img src="images/web_03_sub_01.jpeg" alt="">
                     </div>
                     <div class="mobile">
                         <span>
@@ -377,6 +376,7 @@
                 <li data-aos="fade-left" data-aos-duration="1500" ><img src="images/banner_02.png" alt=""></li>
                 <li data-aos="fade-right" data-aos-duration="1500" ><img src="images/banner_03.jpg" alt=""></li>
                 <li data-aos="fade-left" data-aos-duration="1500" ><img src="images/banner_04.jpg" alt=""></li>
+                <li data-aos="fade-right" data-aos-duration="1500" ><img src="images/banner_05.jpg" alt=""></li>
             </ul>
         </div>
     </div>
@@ -387,6 +387,8 @@
                 <li data-aos="fade-right" data-aos-duration="1500"><img src="images/popup_01.jpg" alt=""></li>
                 <li data-aos="fade-left" data-aos-duration="1500"><img src="images/popup_02.png" alt=""></li>
                 <li data-aos="fade-right" data-aos-duration="1500"><img src="images/popup_03.jpg" alt=""></li>
+                <li data-aos="fade-left" data-aos-duration="1500"><img src="images/popup_04.jpg" alt=""></li>
+                <li data-aos="fade-right" data-aos-duration="1500"><img src="images/popup_05.jpg" alt=""></li>
             </ul>
         </div>
     </div>
