--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
+    <a href="이인혜 포트폴리오.pdf" class="pdf" target="_blank">PDF 보기</a>
     <div class="cover">
         <svg version="1.1" id="레이어_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 3000" style="enable-background:new 0 0 1920 3000;" xml:space="preserve">
             <style type="text/css">
@@ -216,7 +217,7 @@
                             <li>비슷한 컬러를 톤만 다르게 써서 단조로움이 느껴짐</li>
                         </ul>
                     </div>
-                    <a href="https://vnvn3302.github.io/finesofa/" class="clickme">
+                    <a href="https://vnvn3302.github.io/finesofa/" class="clickme" target="_blank">
                         <span>HTML 보기</span>
                     </a>
                     <div class="sub">
@@ -228,7 +229,7 @@
                         </span>
                         <img src="images/web_phone.png" alt="">
                     </div>
-                    <a href="http://vnvn3302.dothome.co.kr/finesofa/index_m.html" class="mobileclick">
+                    <a href="https://vnvn3302.github.io/finesofa_mobile/" class="mobileclick" target="_blank">
                         <span>모바일 보기</span>
                     </a>
                 </div>
@@ -251,7 +252,7 @@
                             <li>일반 소비자가 아닌 가맹점 점주가 보기에는<br>컬러와 폰트가 강렬한 느낌 </li>
                         </ul>
                     </div>
-                    <a href="https://vnvn3302.github.io/yoeat/" class="clickme">
+                    <a href="https://vnvn3302.github.io/yoeat/" class="clickme" target="_blank">
                         <span>HTML 보기</span>
                     </a>
                     <div class="sub">
@@ -284,7 +285,7 @@
                                 어울리지 않는 느낌</li>
                         </ul>
                     </div>
-                    <a href="http://vnvn3302.dothome.co.kr/godiva/" class="clickme">
+                    <a href="https://vnvn3302.github.io/godivava/" class="clickme" target="_blank">
                         <span>HTML 보기</span>
                     </a>
                     <div class="sub">
@@ -292,7 +293,7 @@
                     </div>
                     <div class="mobile">
                         <span>
-                            <img src="images/web_03_mo.jpg" alt="">
+                            <img src="images/web_03_mo.jpeg" alt="">
                         </span>
                         <img src="images/web_phone.png" alt="">
                     </div>
@@ -317,7 +318,7 @@
                                 출판사의 전문적인 느낌이 사라짐</li>
                         </ul>
                     </div>
-                    <a href="http://vnvn3302.dothome.co.kr/minumsa/" class="clickme">
+                    <a href="https://vnvn3302.github.io/bookbook/" class="clickme" target="_blank">
                         <span>HTML 보기</span>
                     </a>
                     <div class="sub">
@@ -349,7 +350,7 @@
                             <li>일관된 모양과 포인트 부분이 적어 심심한 느낌</li>
                         </ul>
                     </div>
-                    <a href="https://vnvn3302.github.io/pottery-barn/" class="clickme">
+                    <a href="https://vnvn3302.github.io/pottery-barn/" class="clickme" target="_blank">
                         <span>HTML 보기</span>
                     </a>
                     <div class="sub">
