--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이인혜 포트폴리오</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -32,6 +31,9 @@
             <strong>portfolio</strong>
             <span class="year">2024</span>
         </div>
+        <div class="sub_textbox">
+            <span>눈</span>과 <span>귀</span>가 열려있는 <span>퍼블리셔 이인혜</span>입니다.
+        </div>
     </div>
     <div class="about">
         <svg version="1.1" id="레이어_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 3000" style="enable-background:new 0 0 1920 3000;" xml:space="preserve">
@@ -58,7 +60,7 @@
                     <div class="cont">
                         <ul>
                             <li>이인혜</li>
-                            <li>1998.01.03</li>
+                            <li>1998.01.03(만 26세)</li>
                             <li>vnvn3302@naver.com</li>
                             <li>010-3302-7281</li>
                             <li>경기도 광주시 능평동 (서현역 30분)</li>
@@ -196,25 +198,21 @@
     <div class="web">
         <div class="centerbox">
             <section class="finesofa">
-                <h2 data-aos="fade-down" data-aos-duration="1000">
-                    1.FineSofa
-                    <span class="detail">웹사이트 메인, 서브*3 디자인+퍼블리싱<br>모바일 메인 디자인+퍼블리싱
-                    </span>
-                </h2>            
+                <h2 data-aos="fade-down" data-aos-duration="1000"> 1.FineSofa</h2>            
                 <div class="cont_box" data-aos="fade-up" data-aos-duration="1500">
                     <div class="main">
                         <img src="images/web_01_main.jpg" alt="">
                     </div>
                     <div class="description">
                         <ul class="title">
-                            <li>신경쓴 부분</li>
-                            <li>어려웠던 부분</li>
-                            <li>아쉬운 부분</li>
+                            <li>기간 / 기여도</li>
+                            <li>작업내용</li>
+                            <li>특이사항</li>
                         </ul>
                         <ul class="my_text">
-                            <li>편안함이 느껴지는 브랜드 이미지 </li>
-                            <li>상단 메뉴바 효과와 햄버거 버튼 퍼블리싱</li>
-                            <li>비슷한 컬러를 톤만 다르게 써서 단조로움이 느껴짐</li>
+                            <li>2주 / 개인 100% </li>
+                            <li>메인, 서브*3page 디자인+퍼블리싱(pc, mobile)</li>
+                            <li>pc버전 header 부분을 include로 연결함</li>
                         </ul>
                     </div>
                     <a href="https://vnvn3302.github.io/finesofa/" class="clickme" target="_blank">
@@ -235,21 +233,23 @@
                 </div>
             </section>
             <section class="yoeat">
-                <h2 data-aos="fade-down" data-aos-duration="1000">2.yoeat<span class="detail"> 반응형 웹사이트 메인, 서브*3 디자인+퍼블리싱</span></h2>            
+                <h2 data-aos="fade-down" data-aos-duration="1000">2.yoeat
+                </h2>            
                 <div class="cont_box" data-aos="fade-up" data-aos-duration="1500">
                     <div class="main">
                         <img src="images/web_02_main.jpeg" alt="">
                     </div>
                     <div class="description">
                         <ul class="title">
-                            <li>신경쓴 부분</li>
-                            <li>어려웠던 부분</li>
-                            <li>아쉬운 부분</li>
+                            <li>기간 / 기여도</li>
+                            <li>작업내용</li>
+                            <li>특이사항</li>
                         </ul>
                         <ul class="my_text">
-                            <li>요거트 브랜드의 발랄한 이미지 </li>
-                            <li>서브페이지 snb 스크립트로 나타내기</li>
-                            <li>일반 소비자가 아닌 가맹점 점주가 보기에는<br>컬러와 폰트가 강렬한 느낌 </li>
+                            <li>1주 / 개인 100%</li>
+                            <li>메인, 서브*3page 디자인+퍼블리싱(반응형)</li>
+                            <li>스크립트를 사용하여 gnb,lnb를 <br>
+                                서브페이지 snb에 삽입</li>
                         </ul>
                     </div>
                     <a href="https://vnvn3302.github.io/yoeat/" class="clickme" target="_blank">
@@ -267,22 +267,21 @@
                 </div>
             </section>
             <section class="godiva">
-                <h2 data-aos="fade-down" data-aos-duration="1000">3.GODIVA<span class="detail">반응형 웹사이트 메인, 서브*2 디자인+퍼블리싱</span></h2>            
+                <h2 data-aos="fade-down" data-aos-duration="1000">3.GODIVA</h2>            
                 <div class="cont_box" data-aos="fade-up" data-aos-duration="1500">
                     <div class="main">
                         <img src="images/web_03_main.jpeg" alt="">
                     </div>
                     <div class="description">
                         <ul class="title">
-                            <li>신경쓴 부분</li>
-                            <li>어려웠던 부분</li>
-                            <li>아쉬운 부분</li>
+                            <li>기간 / 기여도</li>
+                            <li>작업내용</li>
+                            <li>특이사항</li>
                         </ul>
                         <ul class="my_text">
-                            <li>고급 초콜릿 브랜드의 아이덴티티 유지</li>
-                            <li>swiper slide를 처음 적용하여 슬라이드 작동하기</li>
-                            <li>메인 슬라이드 텍스트의 폰트가 브랜드이미지와 <br>
-                                어울리지 않는 느낌</li>
+                            <li>20일 / 개인 100%</li>
+                            <li>메인*서브*2page 디자인+퍼블리싱(반응형)</li>
+                            <li>스와이퍼 슬라이드 라이브러리 사용</li>
                         </ul>
                     </div>
                     <a href="https://vnvn3302.github.io/godivava/" class="clickme" target="_blank">
@@ -300,22 +299,21 @@
                 </div>
             </section>
             <section class="minumsa">
-                <h2 data-aos="fade-down" data-aos-duration="1000">4.민음사<span class="detail">웹사이트 메인, 서브*2 디자인+퍼블리싱</span></h2>            
+                <h2 data-aos="fade-down" data-aos-duration="1000">4.민음사</h2>            
                 <div class="cont_box" data-aos="fade-up" data-aos-duration="1500">
                     <div class="main">
                         <img src="images/web_04_main.jpg" alt="">
                     </div>
                     <div class="description">
                         <ul class="title">
-                            <li>신경쓴 부분</li>
-                            <li>어려웠던 부분</li>
-                            <li>아쉬운 부분</li>
+                            <li>기간 / 기여도</li>
+                            <li>작업내용</li>
+                            <li>특이사항</li>
                         </ul>
                         <ul class="my_text">
-                            <li>기존 사이트와 다른 부드러운 분위기의 디자인</li>
-                            <li>패럴렉스 효과 스크립트로 만들기</li>
-                            <li>배경색과 곡선의 폰트를 사용하다 보니 <br>
-                                출판사의 전문적인 느낌이 사라짐</li>
+                            <li>2주 / 개인 100%</li>
+                            <li>메인, 서브*5page 디자인+퍼블리싱</li>
+                            <li>패럴랙스 효과 사용</li>
                         </ul>
                     </div>
                     <a href="https://vnvn3302.github.io/bookbook/" class="clickme" target="_blank">
@@ -333,21 +331,21 @@
                 </div>
             </section>
             <section class="potterybarn">
-                <h2 data-aos="fade-down" data-aos-duration="1000">5.Pottery Barn<span class="detail">웹사이트 메인 디자인+퍼블리싱, <br>서브 디자인</span></h2>            
+                <h2 data-aos="fade-down" data-aos-duration="1000">5.Pottery Barn</h2>            
                 <div class="cont_box" data-aos="fade-up" data-aos-duration="1500">
                     <div class="main">
                         <img src="images/web_05_main.jpg" alt="">
                     </div>
                     <div class="description">
                         <ul class="title">
-                            <li>신경쓴 부분</li>
-                            <li>어려웠던 부분</li>
-                            <li>아쉬운 부분</li>
+                            <li>기간 / 기여도</li>
+                            <li>작업내용</li>
+                            <li>특이사항</li>
                         </ul>
                         <ul class="my_text">
-                            <li>가격과 제품이 잘 보이도록 깔끔한 디자인 </li>
-                            <li>skrollr를 사용하여 효과 주기</li>
-                            <li>일관된 모양과 포인트 부분이 적어 심심한 느낌</li>
+                            <li>1주 / 개인 100%</li>
+                            <li>메인 디자인+퍼블리싱, 서브 디자인</li>
+                            <li>scss 사용, skrollr 라이브러리 사용</li>
                         </ul>
                     </div>
                     <a href="https://vnvn3302.github.io/pottery-barn/" class="clickme" target="_blank">
@@ -390,6 +388,7 @@
                 <li data-aos="fade-right" data-aos-duration="1500"><img src="images/popup_03.jpg" alt=""></li>
                 <li data-aos="fade-left" data-aos-duration="1500"><img src="images/popup_04.jpg" alt=""></li>
                 <li data-aos="fade-right" data-aos-duration="1500"><img src="images/popup_05.jpg" alt=""></li>
+                <li data-aos="fade-left" data-aos-duration="1500"><img src="images/popup_06.jpg" alt=""></li>
             </ul>
         </div>
     </div>
