파인소파 수정

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             <li>pc버전 header 부분을 include로 연결함</li>
                         </ul>
                     </div>
-                    <a href="https://vnvn3302.github.io/finesofa/" class="clickme" target="_blank">
+                    <a href="http://vnvn3302.dothome.co.kr/finesofa/" class="clickme" target="_blank">
                         <span>HTML 보기</span>
                     </a>
                     <div class="sub">
