교육과정 수정

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <li>2016.02</li>
                         </ul>
                         <ul calss="text">
-                            <li>UI/UX 반응형웹 디자인&퍼블리셔 양성과정 수료예정</li>
+                            <li>UI/UX 반응형웹 디자인&퍼블리셔 양성과정 수료</li>
                             <li>웹퍼블리싱 & 웹개발을 위한 코딩 기초 수료</li>
                             <li>충남대학교 의류학과 졸업</li>
                             <li>충주 중산고등학교 졸업</li>
