--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         </ul>
                     </div>
                     <a href="http://vnvn3302.dothome.co.kr/finesofa/" class="clickme" target="_blank">
-                        <span>HTML 보기</span>
+                        <span>사이트 보기</span>
                     </a>
                     <div class="sub">
                         <img src="images/web_01_sub03.jpg" alt="">
@@ -253,7 +253,7 @@
                         </ul>
                     </div>
                     <a href="https://vnvn3302.github.io/yoeat/" class="clickme" target="_blank">
-                        <span>HTML 보기</span>
+                        <span>사이트 보기</span>
                     </a>
                     <div class="sub">
                         <img src="images/web_02_sub_05.jpeg" alt="">
@@ -285,7 +285,7 @@
                         </ul>
                     </div>
                     <a href="https://vnvn3302.github.io/godivava/" class="clickme" target="_blank">
-                        <span>HTML 보기</span>
+                        <span>사이트 보기</span>
                     </a>
                     <div class="sub">
                         <img src="images/web_03_sub_01.jpeg" alt="">
@@ -317,7 +317,7 @@
                         </ul>
                     </div>
                     <a href="https://vnvn3302.github.io/bookbook/" class="clickme" target="_blank">
-                        <span>HTML 보기</span>
+                        <span>사이트 보기</span>
                     </a>
                     <div class="sub">
                         <img src="images/web_04_sub_01.jpg" alt="">
@@ -349,7 +349,7 @@
                         </ul>
                     </div>
                     <a href="https://vnvn3302.github.io/pottery-barn/" class="clickme" target="_blank">
-                        <span>HTML 보기</span>
+                        <span>사이트 보기</span>
                     </a>
                     <div class="sub">
                         <img src="images/web_05_sub.jpg" alt="">
